refactor: UserResponse from 메서드 추가 및 admin-server 모듈로 이동
관련 기능이 common 모듈에 의존하지 않도록 개선