@@ -8,7 +8,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +22,7 @@ public class UserService {
                 .getContent();
 
         return users.stream()
-                .map(User::toResponse)
-                .collect(Collectors.toList());
+                .map(UserResponse::from)
+                .toList();
     }
 }
